Properly set ArborX check in config

--- a/cmake/TIOGAConfig.cmake.in
+++ b/cmake/TIOGAConfig.cmake.in
@@ -45,6 +45,7 @@ if (NOT TIOGA_FIND_COMPONENTS)
     set(TIOGA_FIND_COMPONENTS "tioga")
 endif ()
 
+set(TIOGA_ENABLE_ARBORX "@TIOGA_ENABLE_ARBORX@")
 if (TIOGA_ENABLE_ARBORX)
   find_dependency(ArborX)
 endif()
