Switch find_dependency to find_package for older CMake versions

--- a/cmake/TIOGAConfig.cmake.in
+++ b/cmake/TIOGAConfig.cmake.in
@@ -47,7 +47,7 @@ endif ()
 
 set(TIOGA_ENABLE_ARBORX "@TIOGA_ENABLE_ARBORX@")
 if (TIOGA_ENABLE_ARBORX)
-  find_dependency(ArborX)
+  find_package(ArborX REQUIRED)
 endif()
 
 set(TIOGA_FOUND TRUE)
